testdata/trans/ok/multipkgs/want/src/skip.go
package root

func Piyo() {
	Foo()
	Bar()
}
