testdata/trans/error/try-arg-non-call/err.go
package foo

func f() error {
	try(1 + 1)
}
